--- a/views/vwAccount/forgot-password-3.hbs
+++ b/views/vwAccount/forgot-password-3.hbs
@@ -19,7 +19,7 @@
                         </div>
                         <button type="submit" id="resetPasswordBtn" class="btn btn-primary w-100"
                             style="background-color: #dc3545; border: none;">
-                            Đặt lại mật khẩu
+                            <b>Đặt lại mật khẩu</b>
                         </button>
                     </form>
                 </div>
