--- a/views/vwAccount/forgot-password.hbs
+++ b/views/vwAccount/forgot-password.hbs
@@ -1,12 +1,13 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card text-center">
-                <div class="card-header h5 text-white" style="background-color: #dc3545;">
+            <div class="card shadow-lg border-0 rounded-lg">
+                <div class="card-header h5 text-white"
+                    style="background-color: #dc3545; border-top-left-radius: .25rem; border-top-right-radius: .25rem;">
                     Thay đổi mật khẩu
                 </div>
-                <div class="card-body px-5">
-                    <p class="card-text py-2">Nhập email mà bạn dùng để đăng nhập.</p>
+                <div class="card-body px-5 py-4">
+                    <p class="card-text text-muted text-center">Nhập email mà bạn dùng để đăng nhập.</p>
                     <form id="resetPasswordForm" action="/forgot-password" method="POST">
                         <div class="form-outline">
                             <input type="email" id="typeEmail" name="email" class="form-control my-3"
@@ -14,9 +15,14 @@
                         </div>
                         <button type="submit" id="resetPasswordBtn" class="btn btn-primary w-100"
                             style="background-color: #dc3545; border: none">
-                            Đặt lại mật khẩu
+                            <b>Đặt lại mật khẩu</b>
                         </button>
                     </form>
+                    <div class="text-left mt-3">
+                        <a href="/login-register" class="text-decoration-none" style="color: #007BFF;">
+                            <i class="bi bi-arrow-left"></i> Đăng nhập
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -28,8 +34,8 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="successModalLabel">Thông báo</h5>
+            <div class="modal-header" style="background-color: #dc3545;">
+                <h5 class="modal-title" id="successModalLabel" style="color: #ffffff">Thông báo</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -38,9 +44,7 @@
                 Chúng tôi đã gửi mã otp tới email của bạn. Vui lòng xác thực để tiếp tục đặt lại mật khẩu.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">
-                    Đóng
-                </button>
+                <button type="button" id="closeModalBtn" class="btn btn-close-custom"><b>Đóng</b></button>
             </div>
         </div>
     </div>
