update admin hbs

--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -14,7 +14,7 @@
 </head>
 <body style="background-color: #F8F9FA; width: 1320px; " class="mx-auto">
 <div class="red-bar ">
-    <div style="  " class="dash-board shadow">
+    <div style="" class="dash-board shadow">
         <div class="border-bottom p-4">
             <div class="d-flex align-items-center ">
                 <img src="/others/newspaper (2).png" width="32px" height="32px">
@@ -115,9 +115,9 @@
                 <img class="ml-3" src="/others/bell.png" width="16px" height="16px">
             </div>
         </div>
-
-
-        {{{body}}}
+        <div class=" mt-4">
+            {{{body}}}
+        </div>
     </div>
 </div>
 
