--- a/views/vwAccount/forgot-password.hbs
+++ b/views/vwAccount/forgot-password.hbs
@@ -11,7 +11,7 @@
                     <form id="resetPasswordForm" action="/forgot-password" method="POST">
                         <div class="form-outline">
                             <input type="email" id="typeEmail" name="email" class="form-control my-3"
-                                placeholder="Nhập email" required />
+                                placeholder="Nhập email" />
                         </div>
                         <button type="submit" id="resetPasswordBtn" class="btn btn-primary w-100"
                             style="background-color: #dc3545; border: none">
@@ -52,13 +52,30 @@
 
 <script>
     document.getElementById("resetPasswordForm").addEventListener("submit", function (event) {
-        event.preventDefault(); // Ngừng hành động mặc định của form
+        event.preventDefault();
+
+        function isValidEmail(email) {
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            return emailRegex.test(email);
+        }
 
         const email = document.getElementById("typeEmail").value;
 
-        // Kiểm tra xem email có hợp lệ không
         if (!email) {
-            alert("Vui lòng nhập email!");
+            Swal.fire({
+                icon: "warning",
+                title: "Vui lòng điền đầy đủ email.",
+                confirmButtonColor: "#ffc107",
+            });
+            return;
+        }
+
+        if (!isValidEmail(email)) {
+            Swal.fire({
+                icon: "warning",
+                title: "Email không hợp lệ.",
+                confirmButtonColor: "#ffc107",
+            });
             return;
         }
 
@@ -70,7 +87,6 @@
             body: JSON.stringify({ email: email }),
         })
             .then(response => {
-                // Kiểm tra mã phản hồi HTTP từ server (status code)
                 if (!response.ok) {
                     throw new Error(`Server trả về lỗi: ${response.statusText}`);
                 }
