--- a/views/vwAdmin/categories/categories-menu.hbs
+++ b/views/vwAdmin/categories/categories-menu.hbs
@@ -4,7 +4,15 @@
 {{/section}}
 
 <div class="bg-white p-4" style="border-radius: 10px">
-    <h3>Danh sách chuyên mục </h3>
+    <div class="d-flex justify-content-between">
+        <h3>Danh sách chuyên mục </h3>
+        <a class="btn btn-outline-success font-weight-bold d-flex align-items-center" href="/admin/categories/add">
+            <i class="bi bi-plus-square-fill mr-1"></i>
+            <span>
+            Thêm chuyên mục
+            </span>
+        </a>
+    </div>
     <div class="border-bottom mt-3 ">
         <div class="row text-white rounded " style="padding: 0.5rem;background-color: #FF3030">
             <h4 class="col-3 d-flex justify-content-center"><span>Tên chuyên mục</span>
@@ -31,7 +39,9 @@
 
                 </div>
                 <div class="col-2 category-section__btn-edit">
-                    <button class="btn btn-primary">Sửa</button>
+                    <button class="btn btn-outline-primary">
+                        <i class="bi bi-pencil-square mr-1"></i>Sửa
+                    </button>
                 </div>
             </div>
         {{/each}}
